update change for query param filter to gender
