# src/controllers/movie.controller.js
@@ -14,7 +14,7 @@ class MovieController {
 
   static async getMovieCharacters(req, res, next) {
     const { id } = req.params;
-    const { sort, order, filter } = req.query;
+    const { sort, order, gender } = req.query;
 
     const idExist = await MovieService.getMoviebyId(id);
     if(!idExist) return res.status(422).json({ success: false, error: "parameter id is non-existent" });
@@ -32,8 +32,8 @@ class MovieController {
         data.result = sortedCharacters;
       }
 
-      if(typeof filter !== 'undefined'){
-        const characterList = MovieService.filterByGender(movieCharacters, filter);
+      if(typeof gender !== 'undefined'){
+        const characterList = MovieService.filterByGender(movieCharacters, gender);
         const filteredCharacters = MovieService.addMetaData(characterList);
         data.count = filteredCharacters.length;
         data.result = filteredCharacters;
